# pip-switch

./: Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
crates/pip-switch/: Cargo.toml
crates/pip-switch-core/: Cargo.toml
crates/pip-switch-core/src/: config.rs  error.rs  lib.rs  mock.rs  monitor.rs  protocol.rs  settings.rs  transport.rs
crates/pip-switch-daemon/: Cargo.toml
crates/pip-switch-daemon/src/: main.rs
crates/pip-switch/src/: main.rs
packaging/linux/: pip-switch-daemon.service
packaging/macos/: Info.plist  LaunchAgent.plist  create-dmg.sh  create-pkg.sh
packaging/macos/scripts/: postinstall
packaging/rpm/: post-uninstall.sh
packaging/scripts/: assert-release-tag.sh  package-tarball.sh  release-version.sh
packaging/udev/: 60-pip-switch-msi.rules
packaging/windows/: pip-switch.wxs
