[package]
name = "pip-switch-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = ["hotkeys"]
hotkeys = ["dep:global-hotkey"]
tray = ["dep:tray-icon"]

[dependencies]
clap.workspace = true
global-hotkey = { workspace = true, optional = true }
pip-switch-core = { path = "../pip-switch-core" }
tray-icon = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
