[package]
name = "pip-switch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
clap.workspace = true
pip-switch-core = { path = "../pip-switch-core" }
tracing.workspace = true
tracing-subscriber.workspace = true

[package.metadata.deb]
name = "pip-switch"
maintainer = "pip-switch maintainers"
depends = "$auto"
section = "utils"
priority = "optional"
extended-description = """\
pip-switch controls MSI Modern MD342CQPW PIP/PBP monitor actions through \
the monitor's USB HID controller. It installs a CLI and udev permissions for \
the MSI HID device."""
assets = [
    ["target/release/pip-switch", "usr/bin/pip-switch", "755"],
    ["../../packaging/udev/60-pip-switch-msi.rules", "usr/lib/udev/rules.d/60-pip-switch-msi.rules", "644"],
    ["../../README.md", "usr/share/doc/pip-switch/README.md", "644"],
]

[package.metadata.generate-rpm]
name = "pip-switch"
summary = "Keyboard-friendly MSI monitor PIP/PBP switch utility"
release = "1"
assets = [
    { source = "target/release/pip-switch", dest = "/usr/bin/pip-switch", mode = "755" },
    { source = "packaging/udev/60-pip-switch-msi.rules", dest = "/usr/lib/udev/rules.d/60-pip-switch-msi.rules", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/pip-switch/README.md", mode = "644", doc = true },
]
